# QAService

./: Cargo.toml  log4rs.yaml  questions.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
src/: db.rs  main.rs  models.rs  routers.rs  store.rs
src/routes/: answer.rs  mod.rs  questions.rs
src/types/: answer.rs  pagination.rs  question.rs
