[package]
name = "web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
warp = "*"
serde = { version="*" , features= ["derive"] }
serde_json = "*"
uuid = {version="*" , features=["v4"]}